@@ -1,4 +1,4 @@
-.TH darkice 1 "April 17, 2005" "DarkIce" "DarkIce live audio streamer"
+.TH darkice 1 "January 25, 2006" "DarkIce" "DarkIce live audio streamer"
 .SH NAME
 darkice \- an icecast / shoutcast live audio streamer
 .SH SYNOPSIS
@@ -17,6 +17,7 @@ DarkIce can record from:
 DarkIce can encode in the following formats:
 
     * mp3 - using the lame library
+    * mp2 - using the twolame library
     * Ogg Vorbis
     * AAC - using the faac library
 
@@ -97,6 +98,7 @@ Developed with contributions by
     Nicholas J. Humfrey <njh@ecs.soton.ac.uk>
     Joel Ebel <jbebel@ncsu.edu>
     <jochen2@users.sourceforge.net>
+    Nicholas J Humfrey <njh@ecs.soton.ac.uk>
 
 .SH LINKS
 Project homepage:
@@ -117,6 +119,10 @@ homepage:
 .B Lame
 homepage:
 .I http://www.mp3dev.org/mp3/
+
+.B TwoLame
+homepage:
+.I http://www.twolame.org/
 
 .B Ogg Vorbis
 homepage:
